# wtools

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
design/: UI-Kit.md  fix_ico.py  fix_ico2.py  generate_all_icons.py  generate_icon.py  icon-generator.html
docs/: PRD.md
lib/: install.ps1  installer.iss  pubspec.yaml  run_test.py
lib/lib/: app.dart  main.dart  main_test.dart
lib/lib/src/models/: search_result.dart
lib/lib/src/pages/: main_window_page.dart
lib/lib/src/providers/: clipboard_provider.dart  search_provider.dart  settings_provider.dart
lib/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/lib/src/rust/api/: app.dart  clipboard.dart  file.dart  window.dart
lib/lib/src/rust/clipboard_impl/: history.dart
lib/lib/src/theme/: app_theme.dart
lib/lib/src/utils/: debouncer.dart  fuzzy_search.dart  icon_cache.dart  time_format.dart  window_events.dart
lib/lib/src/widgets/: app_row_widget.dart  clipboard_list_widget.dart  glass_container.dart  result_item_widget.dart  result_list_widget.dart  search_bar_widget.dart
lib/rust/: Cargo.toml  build.rs
lib/rust/src/: frb_generated.rs  lib.rs
lib/rust/src/api/: app.rs  clipboard.rs  file.rs  mod.rs  window.rs
lib/rust/src/clipboard/: history.rs  mod.rs  monitor.rs
lib/rust/src/everything/: http.rs  log.rs  mod.rs
lib/windows/runner/: Runner.rc
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: history.rs  mod.rs  monitor.rs
src-tauri/src/commands/: app.rs  clipboard.rs  file.rs  mod.rs  window.rs
src-tauri/src/everything/: http.rs  log.rs  search.rs
src-tauri/src/preview_handler/: com_interfaces.rs  host.rs  mod.rs
src/assets/styles/: global.css
src/components/ClipboardList/: index.vue
src/components/FilePreview/: index.vue
src/components/ResultItem/: index.vue
src/components/ResultList/: index.vue
src/components/SearchBar/: index.vue
src/components/StatusBar/: index.vue
src/stores/: search.ts  settings.ts
src/views/MainWindow/: index.vue
