[package]
name = "wtools"
version = "0.3.2"
description = "极简桌面应用与文件快速搜索工具"
authors = ["wTools Team"]
edition = "2021"

[lib]
name = "wtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
time = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
dirs = "5.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "wingdi", "winuser", "windef", "minwindef", "winnt", "libloaderapi", "dwmapi", "uxtheme", "errhandlingapi", "winbase"] }
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
