[package]
name = "wtools_native"
version = "0.4.0"
description = "极简桌面应用与文件快速搜索工具 - Rust native backend"
authors = ["wTools Team"]
edition = "2021"

[lib]
name = "wtools_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
time = "0.3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
dirs = "5.0"
zip = "2.2"
lopdf = "0.35"
quick-xml = "0.36"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "wingdi", "winuser", "windef", "minwindef", "winnt", "libloaderapi", "dwmapi", "uxtheme", "errhandlingapi", "winbase", "combaseapi", "objbase", "unknwnbase", "guiddef", "winreg", "winerror"] }
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }

[profile.release]
opt-level = "s"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization, single unit
strip = true          # Strip symbols
panic = "abort"       # Remove panic unwinding code
